--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -1,5 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 name: Validate Build
+
 on:
   push:
     branches: "dev_**"
@@ -15,14 +16,14 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set Up Python
-        uses: actions/setup-python@v2
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.10"
 
       - name: Install SQLFluff
-        run: pip install sqlfluff
+      - run: pip install sqlfluff
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
+      - run: |
           echo "Validating .sql files for build".
