--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -1,9 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 name: Validate Build
-
 on:
   push:
-    branches: "dev_**"
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
   workflow_dispatch:
 
@@ -13,17 +14,17 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set Up Python
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
         with:
           python-version: "3.10"
 
       - name: Install SQLFluff
-      - run: pip install sqlfluff
+        run: pip install sqlfluff
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-      - run: |
+        run: |
           echo "Validating .sql files for build".
