--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      all: ${{ steps.changes.outputs.all }}
+      ts: ${{ steps.changes.outputs.ts }}
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
@@ -24,7 +27,15 @@ jobs:
       - name: Install SQLFluff
         run: pip install sqlfluff
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo "Validating .sql files for build".
+      - name: Get Changed files
+        id: get-changed-files
+        run:
+          echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)""
+          echo "::set-output name=ts::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
+  files:
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{needs.changedfiles.outputs.ts}}
+    steps:
+      - name: Return files
+        run: echo ${{needs.changedfiles.outputs.ts}}
