--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Get Changed files
         id: get-changed-files
         run:
-          echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)""
+          echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
           echo "::set-output name=ts::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
   files:
     runs-on: ubuntu-latest
