--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -11,9 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      all: ${{ steps.changes.outputs.all }}
-      ts: ${{ steps.changes.outputs.ts }}
+
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
@@ -29,13 +27,10 @@ jobs:
 
       - name: Get Changed files
         id: get-changed-files
-        run:
-          echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
-          echo "::set-output name=ts::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
-  files:
-    runs-on: ubuntu-latest
-    needs: build
-    if: ${{needs.changedfiles.outputs.ts}}
-    steps:
+        run: |
+          git diff --name-only 
+          ${{ github.event.before }} 
+          ${{ github.sha }} > files.txt
+
       - name: Return files
-        run: echo ${{needs.changedfiles.outputs.ts}}
+        run: cat files.txt
