--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -31,4 +31,9 @@ jobs:
           git ls-files > files.txt
 
       - name: Execute validation.py
-        run: python .github/workflows/validate.py
+        run: |
+          python .github/workflows/validate.py
+          if [ $? -ne 0 ]; then
+            echo "Validation failed"
+            exit 1
+          done
