--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -26,7 +26,7 @@ jobs:
         run: pip install sqlfluff
 
       - name: Get Branch Name
-        run: echo $GITHUB_REF
+        run: echo $GITHUB_HEAD_REF
 
       - name: Get SQL Files
         id: get-sql-files
