--- a/.github/workflows/validate_build.yml
+++ b/.github/workflows/validate_build.yml
@@ -25,8 +25,8 @@ jobs:
           python-version: "3.10" # Think about version
 
       # Install required packages for linting
-      - name: Install SQLFluff
-        run: pip install sqlfluff
+      # - name: Install SQLFluff
+      #   run: pip install sqlfluff
 
       # Save names of all .sql files to loop through
       # Maybe these can be stored in variables rather than text file
