--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Check Validation
       id: check_validation
-      run: echo "::set-output name=validation_passed::${{ success() }}"
+      run: echo "::set-output name=validate::${{ success() }}"
     - name: Deploy Code
       if: steps.check_validation.outputs.validation_passed == 'true'
       run: python .github/workflows/deploy.py
