--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,14 @@
 name: Deploy
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Validate"]
+    branches: 
+      - 'dev_**'
+    types:
+      - completed
+  # pull_request:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 jobs:
