--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
-    - name: Check Validation
-      id: check_validation
-      run: echo "::set-output name=validate::${{ success() }}"
+    # - name: Check Validation
+    #   id: check_validation
+    #   run: echo "::set-output name=validate::${{ success() }}"
     - name: Deploy Code
       if: steps.check_validation.outputs.validation_passed == 'true'
       run: python .github/workflows/deploy.py
