--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -58,4 +58,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: save_status
-          path: .github/workflows/validation_status
+          path: .github/workflows/validation_status.txt
