--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,11 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.8"
-
+        
+    # this Action should follow steps to set up Python build environment
+    - name: Install Python dependencies
+      uses: py-actions/py-dependency-install@v4
+      
     # Connect to Snowflake Account
     - name: Initiate Snowflake Connection
       run: python .github/workflows/deploy.py
