--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,11 @@ jobs:
       with:
         python-version: "3.8"
         
-    # this Action should follow steps to set up Python build environment
+    # Installing Python Dependencies
     - name: Install Python dependencies
       uses: py-actions/py-dependency-install@v4
+      with:
+        path: ".github/workflows/requirements.txt"
       
     # Connect to Snowflake Account
     - name: Initiate Snowflake Connection
