--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: Deploy
 on:
   pull_request_review:
     types: [submitted]
+  workflow_dispatch:
 jobs:
   deploy:
     if: github.event.review.state == 'approved'
